--- a/appendix_silica.tex
+++ b/appendix_silica.tex
@@ -1,4 +1,5 @@
 \chapter{Simulation der CVD-Precursormoleküle \ce{SiH4} und \ce{O2}}
+\label{appendix_silica}
 
 ReaxFF-Potentiale versprechen die Simulation von Molekülen und deren Reaktion miteinander, die mit den folgenden Simulationen für Silan und molekularen Sauerstoff überprüft werden sollen.
 Das endgültige Ziel ist die vollständige Simulation reaktiver Gasphasenabscheidungen mit molekulardynamischen Methoden.
