--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -5,23 +5,23 @@
 %\paperonlytrue
 
 \documentclass[
-  draft,
-  fontsize=11pt,
-  a4paper,
-  twoside,
-  german,
-  headsepline=true,
-  footsepline=false,
-  automark,
-  headings=normal,
-  appendixprefix,
-  open=any,
-  cleardoublepage=plain,
-  abstract=true,
-  index=totoc,
-  listof=totoc,
-  bibliography=totoc,
-  BCOR9mm,
+draft,
+fontsize=11pt,
+a4paper,
+twoside,
+german,
+headsepline=true,
+footsepline=false,
+automark,
+headings=normal,
+appendixprefix,
+open=any,
+cleardoublepage=plain,
+abstract=true,
+index=totoc,
+listof=totoc,
+bibliography=totoc,
+BCOR9mm,
 ]{scrreprt}
 
 \include{packages}
@@ -63,13 +63,8 @@
 \todoline{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
 \todoline{figures und tables positionieren!}
 \todoline{Erste Absätze: Keine Einrückung.}
-\todoline{Überprüfen, wo von Simulationen, Parsivald-Problemen, allgemeines System-Verhalten und Experimenten die Rede ist}
-\todoline{Keine Ebenen mit nur einem Eintrag (e.g. Kupfer-Ergebnisse)}
 \todoline{Mit Vortrag abgleichen}
-\todoline{Aktivierungsenergien, Arrhenius-Gleichung, PVD-Raten einbinden}
-\todoline{Inhalte aus dem Anhang in die Arbeit ziehen, insbesondere für Silizium}
-\todoline{hier und da eine Längenskala}
+\todoline{Inhalte aus dem Anhang in die Arbeit ziehen, insbesondere für silicon/silica}
 \todoline{Kein Umbruch zwischen Bezeichnungen und inline-Formeln}
+\todoline{Kein Umbruch in Formel-SI-Kombinationen}
 \todoline{Kein Seitenumbruch zwischen Erklärungen und Formeln}
-
-\todoline{Wofür brauchte ich Phasendiagramme?}
