appendix_datastructures delaunay hierarchy adjusted

--- a/appendix_datastructures.tex
+++ b/appendix_datastructures.tex
@@ -108,7 +108,7 @@ Abschnitt~\ref{datadelaunay} stellt Delaunay-Triangulationen vor, welche durch B
 \section{Delaunay-Triangulationen}
 \label{appendix_delaunay}
 
-\subsubsection{Ausgewählte Eigenschaften einer Delaunay-Triangulation}
+\subsection{Ausgewählte Eigenschaften einer Delaunay-Triangulation}
 
 \begin{itemize}
 \item Jeder Punkt ist Eckpunkt eines oder mehrerer Simplexe
